force-app/main/default/objects/TWIST_GA_config__mdt/TWIST_GA_config__mdt.object-meta.xml
<CustomObject>
    <label>TWIST GA config</label>
    <pluralLabel>TWIST GA configs</pluralLabel>
</CustomObject>