force-app/main/default/objects/TWIST_GA_config__mdt/fields/Environment_Id__c.field-meta.xml
<CustomField>
    <fullName>Environment_Id__c</fullName>
    <label>Environment_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>