force-app/main/default/objects/TWIST_GA_config__mdt/fields/Environment_Type__c.field-meta.xml
<CustomField>
    <fullName>Environment_Type__c</fullName>
    <label>Environment_Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>