force-app/main/default/objects/TWIST_GA_config__mdt/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>