force-app/main/default/objects/TWIST_GA_config__mdt/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <label>Page Name</label>
    <type>TextArea</type>
</CustomField>