force-app/main/default/objects/TWIST_GA_config__mdt/fields/Page_Rank__c.field-meta.xml
<CustomField>
    <fullName>Page_Rank__c</fullName>
    <label>Page_Rank</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>