force-app/main/default/objects/TWIST_GA_config__mdt/fields/Page_Type__c.field-meta.xml
<CustomField>
    <fullName>Page_Type__c</fullName>
    <label>Page Type</label>
    <type>TextArea</type>
</CustomField>