force-app/main/default/objects/TWIST_GA_config__mdt/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <label>PageName</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>