force-app/main/default/objects/TWIST_GA_config__mdt/fields/PageRank__c.field-meta.xml
<CustomField>
    <fullName>PageRank__c</fullName>
    <label>PageRank</label>
    <type>TextArea</type>
</CustomField>