force-app/main/default/objects/TWIST_GA_config__mdt/fields/PageType__c.field-meta.xml
<CustomField>
    <fullName>PageType__c</fullName>
    <label>PageType</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>